syntax = "proto3";

option csharp_namespace = "Rozetka.PriceTracker.Grpc";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

package priceTracker;

message TrackProductRequest{
	string productUrl = 1;
}

message TrackProcutPricesRequest{
	repeated int32 productIds = 1;
}

message TrackProductPriceResponse{
	repeated TrackProductResponse products = 1;
}

message TrackProductResponse{
	int32 id = 1;
	float price = 2;
	string imageUrl = 3;
	string title = 4;
	string description = 5;
	string url = 6;
	float discount = 7;
	string status = 8;
	string sell_status = 9;
	repeated ProductAdditionalPricesResponse additional_prices = 10;
	float prev_price = 11;
}

message ProductAdditionalPricesResponse{
	int64 id = 1;
	int64 product_id = 2;
	float discount_price = 4;
	string description = 5;
	string title = 6;
	google.protobuf.Timestamp last_updated_on = 7;
}

message GetProductInfoRequest{
	int64 productId = 1;
}

message PorductPriceHistoryResponse{
	int64 id = 1;
	int64 product_id = 2;
	float price = 3;
	google.protobuf.Timestamp Date = 4;


}

message ProductInfoResponse{
	TrackProductResponse productInfo = 1;
	repeated PorductPriceHistoryResponse prices = 2;

}

service PriceTracker{
	rpc TrackProduct (TrackProductRequest) returns (TrackProductResponse);
	rpc TrackPrices (google.protobuf.Empty) returns (TrackProductPriceResponse);
	rpc TrackProductStream(TrackProductRequest) returns (stream TrackProductResponse);
	rpc GetProductInfo(GetProductInfoRequest) returns (ProductInfoResponse);
}